--- a/www/index.html
+++ b/www/index.html
@@ -17,13 +17,14 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="js/ionic-googlemaps.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <!-- <script src="js/controllers.js"></script> -->
   </head>
 
-  <body ng-app="starter">
+  <body >
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
