resolve map route with current geolocation

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="js/ionic-googlemaps.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBISxpY2wNtjvuNc-PFZRame5heWGDH6Lg"  ></script> 
 
     <!-- your app's js -->
     <!-- <script src="js/app.js"></script> -->
