MapView + Ctrl: added ion slide box and plotRouteTo on marker click

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.10/d3.min.js"></script>
     
     <script src="js/ionic-googlemaps.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBISxpY2wNtjvuNc-PFZRame5heWGDH6Lg&libraries=geometry"  ></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBISxpY2wNtjvuNc-PFZRame5heWGDH6Lg"  ></script> 
     
   </head>
 
